--- a/video.css
+++ b/video.css
@@ -1,24 +1,22 @@
 body {
 	margin: 0px;
-	background-color: black;
+	background-color: rgb(47, 47, 47);
 	font-family: Arial, Helvetica, sans-serif;
 }
 
 #navbar {
 	display: flex;
 	height: 50px;
-	justify-content: space-around;
-	border: 1px solid;
-	align-items: center;
 	border: #505050 1px solid;
 	background-color: rgb(20, 20, 20);
 }
 
 #navbar > #symbols {
+	width: 20%;
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
-	margin-left: -10%;
+	align-self: left;
 }
 
 #menu {
@@ -49,6 +47,7 @@ body {
 	height: 80%;
 	align-items: center;
 	justify-content: space-evenly;
+	display: none;
 }
 #search_bar > #search {
 	background-color: rgb(34, 34, 34);
@@ -76,31 +75,17 @@ body {
 }
 
 #container {
-	display: grid;
-	grid-template-columns: repeat(4, 1fr);
-	grid-template-rows: repeat(auto auto);
-	gap: 10px;
+	display: flex;
+	width: 50%;
+	margin: auto;
+	justify-content: center;
 	margin-top: 40px;
 }
 
-#container > section {
-	background-color: #252525;
-	border-radius: 5%;
-	padding: 4%;
-	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-	cursor: pointer;
-}
-
-#container > section > img {
-	width: 100%;
-	border-radius: 5%;
-	cursor: pointer;
-}
-
-#container > section > p {
-	color: azure;
-}
-
-#container > section > h4 {
-	color: azure;
+#container > iframe {
+	border-radius: 14px;
+	border: 2px solid #606060;
+	box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+		rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+		rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
